--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ requires-python = ">=3.9"
 dependencies = [
   "typer>=0.9.0",             # CLI framework with Rich integration
   "psycopg[binary]>=3.1",     # psycopg3 with binary wheels on macOS
+  "psycopg_pool>=3.1",         # Connection pooling for psycopg3
   "python-dotenv>=0.21",      # load_dotenv used in helper scripts
   "fastapi>=0.104.0",
   "uvicorn[standard]>=0.24.0",
