--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ notebooks = [
   "notebook>=7.5.2",
   "seaborn>=0.13.2",
 ]
+pint = [
+  "pint>=0.23",
+  "pint-pandas>=0.6",
+]
 docs = [
   "sphinx>=7.4.7",
   "nbsphinx>=0.9.8",
